ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringWithEmbeddedYieldKeyword/input.ts.stderr
error[1005]: Expected '('
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringWithEmbeddedYieldKeyword/input.ts:1:15
  |
1 | function* gen {
  |               ^

